# gplsi-fast-0.1.0

./: README.md  pyproject.toml
src/GpLSI/: __init__.py  gplsi.py  graphSVD.py  utils.py
src/gplsi_fast/: gplsi.py  graphsvd.py  utils.py
src/gplsi_fast.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
vignettes/: spatial_topic_demo.py
